syntax = "proto3";
package grpc.server.human.resource;

option csharp_namespace = "GrpcServer.HumanResource";

service Employee {
	rpc GetEmployee (EmployeeRequest) returns (EmployeeModel);
	rpc GetEmployees (EmployeeRequest) returns (stream EmployeeModel);
	rpc AddEmployee (EmployeeModel) returns (EmployeeAddedResult);
	rpc AddEmployees (stream EmployeeModel) returns (EmployeeAddedResult);
}

message EmployeeRequest {
	int32 id = 1;
}

message EmployeeModel {
	int32 id = 1;
	string name = 2;
	repeated PhoneNumber phone_numbers = 3;
	EmployeeType employee_type = 4;
	int64 modifiedTime = 5;
	
	message PhoneNumber {
		string value = 1;
	}
}

enum EmployeeType {
	FIRST_LEVEL = 0;
	SECOND_LEVEL = 1;
	LAST_LEVEL = 2;
}

message EmployeeAddedResult {
	bool is_success = 1;
}